[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/objects/GrabObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/objects/ThrowObjects/Guns/Gun.gd" type="Script" id=2]
[ext_resource path="res://audio/Cocking Gun-SoundBible.com-327068561.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="Gun" instance=ExtResource( 1 )]
script = ExtResource( 2 )
Ammo = inf
Speed = 1500
ShootTime = 0.001
ReloadTime = 1.0
Accuracy = 1.0
Auto = false

[node name="Icon" parent="." index="0"]
position = Vector2( 7, -6 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 7, -6 )
shape = SubResource( 1 )

[node name="Area2D" parent="." index="2"]
position = Vector2( 7, -6 )
collision_mask = 2

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="3"]
one_shot = true

[node name="CockingSOund" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 3 )
volume_db = 5.0
bus = "SFX"

[node name="FirePoint" type="Node2D" parent="." index="5"]
position = Vector2( 36, -17 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
